@@ -34,6 +34,7 @@
 (require 'nnoo)
 (eval-when-compile (require 'cl))
 (require 'gnus-util)
+(require 'gnus-range)
 
 (nnoo-declare nnfolder)
 
@@ -349,7 +350,14 @@ If nil, `nnfolder-file-coding-system' is used.")
 		       (buffer-substring
 			(point) (progn (end-of-line) (point)))
 		       force nnfolder-inhibit-expiry))
-	    (nnheader-message 5 "Deleting article %d..."
+	    (unless (eq nnmail-expiry-target 'delete)
+	      (with-temp-buffer
+		(nnfolder-request-article (car maybe-expirable) 
+					  newsgroup server (current-buffer))
+		(let ((nnml-current-directory nil))
+		  (nnmail-expiry-target-group
+		   nnmail-expiry-target newsgroup))))
+	    (nnheader-message 5 "Deleting article %d in %s..."
 			      (car maybe-expirable) newsgroup)
 	    (nnfolder-delete-mail)
 	    ;; Must remember which articles were actually deleted
