@@ -1,3 +1,14 @@
+2002-08-23  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* nnfolder.el (nnfolder-request-expire-articles): expiry-target.
+
+	* nnbabyl.el (nnbabyl-request-expire-articles): Ditto.
+
+	* nnmbox.el (nnmbox-request-expire-articles): Ditto.
+
+	* nnmh.el (nnmh-request-expire-articles): Implemented
+	expiry-target for nnmh backend.
+
 2002-08-20  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* gnus-art.el (gnus-button-url-regexp): Use POSIX regexp if possible.
